# mtg-ai-server

./: Cargo.toml  Dockerfile  README.md  fly.toml  hello.html
src/: ailib.rs  formats.rs  handlers.rs  lib.rs  main.rs  routes.rs
