[package]
name = "mtg_ai_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
dotenv = "0.15.0"
futures = "0.3.31"
regex='1.11.1'
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
warp = "0.3.7"
